$Id: History,v 1.17 2001-12-11 17:42:24 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm2 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

11-12-01  gcosmo (testem2-V03-02-04)
- SteppingAction: added check on history depth also for rings!

06-12-01  gcosmo (testem2-V03-02-03)
- SteppingAction: correctly determine replica number.
- Set run verbosity to 1 in input script.
     
28-11-01  mma (testem2-V03-02-02) 
- EventAction: DrawTrack "none"
- small change in vis.mac and DetectorConstruction.cc
- suppression of the rndm commands, now managed by G4RunManager: 
  --> RunAction, EventAction. suppression of RunActionMessenger
     
31-10-01 mma (testem2-V03-02-01)
- invert run/initialize and calor/update in all runXX.mac (and TestEm2.in)
     
25-10-01 mma (testem2-V03-02-00)
- mods in TestEm2.cc: the initialisation and vis initialisation are
  not done by default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac
- 80 columns everywhere.    
	       
19-10-01  Steve O'Neale (examples-V03-02-00)
- Update reference output

27-03-01  mma (testem2-V03-00-05)
- set cppflag G4NOHIST = true in gnumakefile
     
08-03-01  Hisaya (testem2-V03-00-04)
- RunAction adapted for STL
	       
21-02-01  mma (testem2-V03-00-03)
- hbook histograms restored
	            
20-02-01  mma (testem2-V03-00-02)
- verbose stepping adapted for STL