@@ -1,4 +1,4 @@
-# $Id: run01.mac,v 1.5 2001-10-31 17:34:12 maire Exp $
+# $Id: run01.mac,v 1.6 2002-05-31 16:06:54 maire Exp $
 #
 # Macro file for "TestEm2.cc" 
 # (can be run in batch, without graphic)
@@ -7,9 +7,10 @@
 #
 /control/verbose 2
 #
-#/run/particle/setCut 1.0 mm
-#/run/particle/applyCuts
+#/run/particle/setCut 1 mm
 /run/initialize
+#
+/run/particle/applyCuts
 #
 /run/verbose 2
 /event/printModulo 10
