@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2001-12-11 17:42:24 gcosmo Exp $
+$Id: History,v 1.18 2002-05-31 16:06:53 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+31-05-02 mma (testem2-V04-00-00)
+-old histograming package clhep/hist replaced by AIDA 2.2/anaphe. See README 
 
 11-12-01  gcosmo (testem2-V03-02-04)
 - SteppingAction: added check on history depth also for rings!
